# sherwood-toolbox

./: .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  ISSUES.md  PRODUCTION_NOTES.md  README.md  SHARING.md  STRUCTURE.md  Sherwood_Toolbox-0.3.0-x86_64.AppImage.buildinfo  pyproject.toml  toolbox-spec.html
.abacusai/: config.json
debian/: control  postinst  prerm  sherwood-toolbox.desktop
deploy/: DEPLOY.md  docker-compose.droplet.yml  docker-compose.example.yml  nginx-redirects-old-subdomains.conf  nginx-tools-http-only.conf  nginx-tools-sherwoodestimates.conf
mockup/: build_standalone.py  index.html
mockup/src/: document-generator.html  estimate-enhancer.html  hub.html  iws.html  photo-report.html
mockup/src/css/: styles.css
run/: build-appimage.sh  build-deb.sh  desktop.py  install-standalone.sh  make-portable-bundle.sh  sherwood-toolbox-wrapper.sh  sherwood-toolbox.desktop  standalone.py
spec/: build_spec.py
spec/partials/: documents.html  estimate-enhancer.html  iws.html  maintainability.html  overview.html  photo-report.html  run-local.html  web-parked.html
toolbox/: __init__.py  app.py  config.py  registry.py
toolbox/core/: auth.py  capabilities.py  crm.py  crm_search.py  hub.py
toolbox/core/templates/: _crm_credentials.html  admin.html  base.html  hub.html  login.html  placeholder.html
toolbox/tools/documents/: __init__.py  routes.py
toolbox/tools/estimate_enhancer/: __init__.py  pdf_ops.py  routes.py
toolbox/tools/iws/: __init__.py  pdf_extractor.py
toolbox/tools/photo_report/: __init__.py  routes.py
(+30 files in other folders)
